--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 @media (max-width: 768px) {
     .bg-mobile {
-        background-image: url('../assets/img/office15189548.webp');
+        background-image: url('https://c1prowbmhyo8n8ks.public.blob.vercel-storage.com/landing/office15189548-EblwJ2UEsYRytUgxKDz9gArB5CVC2y.webp');
         background-position: center;
         background-size: cover;
     }
